--- a/client/src/assets/css/responsive.css
+++ b/client/src/assets/css/responsive.css
@@ -1,11 +1,20 @@
 @media (max-width: 374.98px) {
 
+    .slider-img {
+        width: 100% !important;
+        height: 226px;
+    }
+
     .Desktop {
         display: none;
     }
 }
 
 @media (min-width: 375.98px) and (max-width: 575.98px) {
+    .slider-img {
+        width: 100% !important;
+        height: 226px;
+    }
 
     .Desktop {
         display: none;
@@ -23,19 +32,16 @@
     .Mobile {
         display: none;
     }
-
 }
 
 @media (min-width: 992px) and (max-width: 1199.98px) {
     .Mobile {
         display: none;
     }
-
 }
 
 @media (min-width: 1200px) {
     .Mobile {
         display: none;
     }
-
 }
