--- a/client/src/assets/css/productDetails.css
+++ b/client/src/assets/css/productDetails.css
@@ -17,3 +17,18 @@
     font-family: "Roboto Condensed", sans-serif;
     font-weight: 400;
 }
+
+.bigimage {
+    height: 400px;
+    margin-left: 150px;
+}
+
+.smallimage {
+    height: 100px;
+}
+
+.product-sm-img {}
+
+.product-sm-img:hover {
+    cursor: pointer;
+}
