--- a/client/src/assets/css/productDetails.css
+++ b/client/src/assets/css/productDetails.css
@@ -32,3 +32,9 @@
 .product-sm-img:hover {
   cursor: pointer;
 }
+.detailimage {
+    max-width: 60%;
+    height: 499px;
+    margin: 0px;
+    margin-left: 142px;
+}
